RESOLVED FIXED179033
Element fullscreen should use FloatRects instead of IntRects in beganEnterFullScreenWithInitialFrame
https://bugs.webkit.org/show_bug.cgi?id=179033
Summary Element fullscreen should use FloatRects instead of IntRects in beganEnterFul...
Jeremy Jones
Reported 2017-10-30 15:01:31 PDT
This affects Mac and iOS implementations.
Attachments
Patch (3.18 KB, patch)
2017-11-01 23:02 PDT, Jeremy Jones
no flags
Patch (3.22 KB, patch)
2017-11-01 23:03 PDT, Jeremy Jones
no flags
Jeremy Jones
Comment 1 2017-11-01 22:56:34 PDT
iOS part is already done. This is just for the Mac part.
Jeremy Jones
Comment 2 2017-11-01 23:00:41 PDT
Jeremy Jones
Comment 3 2017-11-01 23:02:37 PDT
Jeremy Jones
Comment 4 2017-11-01 23:03:48 PDT
WebKit Commit Bot
Comment 5 2017-11-03 11:03:54 PDT
Comment on attachment 325688 [details] Patch Clearing flags on attachment: 325688 Committed r224406: <https://trac.webkit.org/changeset/224406>
WebKit Commit Bot
Comment 6 2017-11-03 11:03:56 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.