Element fullscreen should use FloatRects instead of IntRects in beganEnterFullScreenWithInitialFrame https://bugs.webkit.org/show_bug.cgi?id=179033 rdar://problem/35309279

Patch by Jeremy Jones <jeremyj@apple.com> on 2017-11-03
Reviewed by Darin Adler.

Screen coordinates are floats, so use NSRect instead of IntRect on Mac.

* UIProcess/mac/WKFullScreenWindowController.h:
* UIProcess/mac/WKFullScreenWindowController.mm:
(-[WKFullScreenWindowController beganEnterFullScreenWithInitialFrame:finalFrame:]):
(-[WKFullScreenWindowController beganExitFullScreenWithInitialFrame:finalFrame:]):

Canonical link: https://commits.webkit.org/195344@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224406 268f45cc-cd09-0410-ab3c-d52691b4dbfc