Source/WebKit/UIProcess/mac/WKFullScreenWindowController.mm
@@ -261,7 +261,7 @@ static RetainPtr<CGImageRef> createImageWithCopiedData(CGImageRef sourceImage)
     [self _manager]->willEnterFullScreen();
 }
 
-- (void)beganEnterFullScreenWithInitialFrame:(const WebCore::IntRect&)initialFrame finalFrame:(const WebCore::IntRect&)finalFrame
+- (void)beganEnterFullScreenWithInitialFrame:(NSRect)initialFrame finalFrame:(NSRect)finalFrame
 {
     if (_fullScreenState != WaitingToEnterFullScreen)
         return;
@@ -356,7 +356,7 @@ static const float minVideoWidth = 480 + 20 + 20; // Note: Keep in sync with med
     [self _manager]->requestExitFullScreen();
 }
 
-- (void)beganExitFullScreenWithInitialFrame:(const WebCore::IntRect&)initialFrame finalFrame:(const WebCore::IntRect&)finalFrame
+- (void)beganExitFullScreenWithInitialFrame:(NSRect)initialFrame finalFrame:(NSRect)finalFrame
 {
     if (_fullScreenState != WaitingToExitFullScreen)
         return;
